<resources>
    <string name="app_name">BLU</string>
    <string name="univ_name">Nama Universitas</string>
    <string name="description">Deskripsi</string>
    <string name="about">about</string>
    <string name="profile_name">Albertus Ivan Martino</string>
    <string name="profile_email">aimartino42@gmail.com</string>
    <string name="profile_des">"Undergraduate Informatics Student at Telkom University"</string>
    <string name="share">Share</string>
    <string name="rangeukt">Range UKT :</string>
    <string name="alamat">Alamat :</string>
    <string-array name="data_name">
        <item>Universitas Padjajaran</item>
        <item>Institut Teknologi Bandung</item>
        <item>Universitas Pendidikan Indonesia</item>
        <item>Institut Seni dan Budaya Indonesia</item>
        <item>Telkom University</item>
        <item>UIN Sunan Gunung Djati Bandung</item>
        <item>Universitas Komputer</item>
        <item>Universitas Katolik Parahyangan</item>
        <item>Universitas Pasundan</item>
        <item>Universitas Islam Bandung</item>
    </string-array>
    <string-array name="data_description">
        <item>Universitas Padjadjaran atau bisa disingkat Unpad merupakan universitas negeri berlokasi di daerah Jatinangor, Sumedang, Jawa Barat. Meskipun terletak di Sumedang, Unpad sering dikenal sebagai salah satu universitas di Bandung. Bukan tanpa alasan, kampus Unpad dulunya memang terletak di Bandung, tepatnya di Jalan Dipatiukur yang kini menjadi kampus untuk pascasarjana</item>
        <item>Institut Teknologi Bandung (ITB) berdiri sejak 3 Juli 1920 oleh kolonial Belanda dengan nama de Technische Hoogeschool te Bandung (TH). Setelah beberapa kali berganti nama, nama ITB diresmikan pada 2 Maret 1959. Sejak awal berdirinya, ITB merupakan perguruan tinggi negeri yang fokus pada disiplin ilmu teknik, ilmu pasti, dan ilmu alam.</item>
        <item>Universitas Pendidikan Indonesia (UPI) memiliki cikal bakal dari Perguruan Tinggi Pendidikan Guru (PTPG) yang merupakan bagian dari Unpad. Kemudian pada tahun 1963 memisahkan diri menjadi IKIP (Institut Keguruan dan Ilmu Pendidikan) Bandung. Pada tahun 1999, IKIP resmi berganti nama menjadi UPI.</item>
        <item>Cikal bakal dari Institut Seni dan Budaya Indonesia (ISBI) adalah Konservatori Tari (KORI) yang berkembang menjadi Akademi Seni Tari Indonesia (ASTI) Bandung pada tahun 1971. Kemudian ASTI berganti nama menjadi Sekolah Tinggi Seni Indonesia (STSI) pada tahun 1995 sampai akhirnya menjadi ISBI pada tahun 2014.</item>
        <item>Universitas Telkom merupakan gabungan dari empat perguruan tinggi, yaitu Institut Teknologi Telkom (2007), Institut Manajemen Telkom (2008), Sekolah Tinggi Senirupa dan Desain Indonesia Telkom (2010), dan Politeknik Telkom (2007). Keempat perguruan tinggi tersebut resmi bergabung menjadi Universitas Telkom pada 14 Agustus 2013.</item>
        <item>Universitas Islam Negeri (UIN) Sunan Gunung Djati Bandung berasal dari Institut Agama Islam Negeri (IAIN) Sunan Gunung Djati Bandung. IAIN tersebut berdiri sejak 8 April 1968 dan berubah menjadi UIN pada 10 Oktober 2005.</item>
        <item>Universitas Komputer atau biasa disingkat Unikom berdiri pada 8 Agustus 2000. Cikal bakal Unikom adalah dari Lembaga Pendidikan Komputer Indonesia Jerman (LPKIG) pada tahun 1994.</item>
        <item>Universitas Katolik Parahyangan atau biasa disingkat Unpar merupakan salah satu perguruan swasta tertua yang ada di Bandung dan Indonesia. Awalnya Unpar merupakan Akademi Perniagaan yang didirikan oleh dua orang uskup pada 17 Januari 1955. Kemudian pada tahun 1961 resmi berganti nama menjadi Unpar.</item>
        <item>Universitas Pasundan atau bisa disingkat Unpas merupakan salah satu perguruan tinggi swasta tertua juga di Bandung. Unpas berdiri sejak 14 November 1960 oleh Paguyuban Pasundan.</item>
        <item>Universitas Islam Bandung atau bisa disingkat Unisba merupakan perguruan tinggi swasta di Bandung yang berdidi sejak tahun 1958 dengan nama Perguruan Islam Tinggi (PIT). Kemudian pada tahun 2007 resmi berganti menjadi Unisba.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/unpad</item>
        <item>@drawable/itb</item>
        <item>@drawable/upi</item>
        <item>@drawable/isbi</item>
        <item>@drawable/telu</item>
        <item>@drawable/uinsgj</item>
        <item>@drawable/unikom</item>
        <item>@drawable/unpar</item>
        <item>@drawable/unpas</item>
        <item>@drawable/uinb</item>
    </integer-array>
    <string-array name="data_ukt">
        <item>Rp. 2.000.000 – 15.000.000</item>
        <item>Rp. 1.000.000 – 25.000.000</item>
        <item>Rp. 3.000.000 – 7.000.000</item>
        <item>Rp. 500.000 – 2.500.000</item>
        <item>Rp. 6.000.000 – 20.000.000</item>
        <item>Rp. 400.000 – 4.000.000</item>
        <item>Rp. 5.000.000 – 8.000.000</item>
        <item>Rp. 12.000.000 – 50.000.000</item>
        <item>Rp. 4.000.000 – 10.000.000</item>
        <item>Rp. 1.000.000 – 40.000.000</item>
    </string-array>
    <string-array name="data_alamat">
        <item>Jl. Raya Bandung Sumedang KM.21, Hegarmanah, Kec. Jatinangor, Kabupaten Sumedang, Jawa Barat 45363</item>
        <item>Jl. Ganesa No.10, Lb. Siliwangi, Kecamatan Coblong, Kota Bandung, Jawa Barat 40132</item>
        <item>Jl. Dr. Setiabudi No.229, Isola, Kec. Sukasari, Kota Bandung, Jawa Barat 40154</item>
        <item>Jl. Buah Batu No.212, Cijagra, Kec. Lengkong, Kota Bandung, Jawa Barat 40265</item>
        <item>Jl. Telekomunikasi. 1, Terusan Buahbatu - Bojongsoang, Telkom University, Sukapura, Kec. Dayeuhkolot, Kabupaten Bandung, Jawa Barat 40257</item>
        <item>Jl. A.H. Nasution No. 105A, Kec. Cibiru - Kota Bandung - Prov. Jawa Barat, Indonesia 40614</item>
        <item>Jl. Dipati Ukur No.112–116, Lebakgede, Kecamatan Coblong, Kota Bandung, Jawa Barat 40132</item>
        <item>Jl. Ciumbuleuit No.94, Hegarmanah, Kec. Cidadap, Kota Bandung, Jawa Barat 40141</item>
        <item>Jl. Tamansari No.6-8, Tamansari, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40116</item>
        <item>Jl. Tamansari No.1, Tamansari, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40116</item>
    </string-array>
</resources>